--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/mdx": "4.2.4",
     "@astrojs/rss": "4.0.11",
     "@astrojs/sitemap": "3.3.0",
+    "@fontsource-variable/playfair-display": "^5.2.6",
     "astro": "5.7.4",
     "typescript": "5.8.3"
   },
